[package]
name = "chia-wallet-sdk"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"
description = "An unofficial SDK for building Chia wallets."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Chia-Network/cni-wallet-sdk"
repository = "https://github.com/Chia-Network/cni-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[workspace]
resolver = "2"
members = ["crates/*", "napi"]

[workspace.package]
readme = "README.md"
keywords = ["chia", "wallet", "blockchain", "crypto"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
unsafe_code = "deny"
non_ascii_idents = "deny"
unused_extern_crates = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "warn"
unreachable_code = "warn"
unreachable_patterns = "deny"
dead_code = "deny"
deprecated = "deny"
deprecated_in_future = "deny"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"

[workspace.lints.rustdoc]
all = { level = "deny", priority = -1 }
missing_crate_level_docs = "allow"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"

[features]
chip-0035 = ["chia-sdk-driver/chip-0035"]
native-tls = ["chia-sdk-client/native-tls"]
rustls = ["chia-sdk-client/rustls"]

[dependencies]
thiserror = { workspace = true }
chia-protocol = { workspace = true }
hex = { workspace = true }
bech32 = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
indexmap = { workspace = true }
chia-sdk-client = { workspace = true }
chia-sdk-driver = { workspace = true }
chia-sdk-offers = { workspace = true }
chia-sdk-signer = { workspace = true }
chia-sdk-test = { workspace = true }
chia-sdk-types = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
hex-literal = { workspace = true }
chia-puzzles = { workspace = true }
chia-bls = { workspace = true  }
clvm-utils = { workspace = true }
clvm-traits = { workspace = true, features = ["derive"] }
clvmr = { workspace = true }

[workspace.dependencies]
chia-wallet-sdk = { version = "0.17.0", path = "." }
chia-sdk-client = { version = "0.17.0", path = "./crates/chia-sdk-client" }
chia-sdk-derive = { version = "0.17.0", path = "./crates/chia-sdk-derive" }
chia-sdk-driver = { version = "0.17.0", path = "./crates/chia-sdk-driver" }
chia-sdk-offers = { version = "0.17.0", path = "./crates/chia-sdk-offers" }
chia-sdk-signer = { version = "0.17.0", path = "./crates/chia-sdk-signer" }
chia-sdk-test = { version = "0.17.0", path = "./crates/chia-sdk-test" }
chia-sdk-types = { version = "0.17.0", path = "./crates/chia-sdk-types" }
chia = "0.15.0"
chia-ssl = "0.11.0"
chia-protocol = "0.15.0"
chia-consensus = "0.15.0"
chia-traits = "0.15.0"
chia-bls = "0.15.0"
chia-puzzles = "0.15.0"
clvm-traits = "0.15.0"
clvm-utils = "0.15.0"
clvmr = "0.9.0"
thiserror = "1.0.61"
hex = "0.4.3"
bech32 = "0.9.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
hex-literal = "0.4.1"
indexmap = "2.2.6"
bip39 = "2.0.0"
futures-util = "0.3.30"
futures-channel = "0.3.30"
anyhow = "1.0.86"
tokio = "1.37.0"
itertools = "0.13.0"
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
native-tls = "0.2.11"
rustls = "0.22.0"
rustls-pemfile = "2.1.3"
log = "0.4.21"
flate2 = "1.0.30"
once_cell = "1.19.0"
num-bigint = "0.4.6"
rstest = "0.22.0"
tracing = "0.1.40"
syn = "2.0.76"
quote = "1.0.37"
convert_case = "0.6.0"
fastrand = "2.1.1"
napi-derive = "2.12.2"
napi = { version = "2.12.2", default-features = false }
paste = "1.0.15"

[profile.release]
lto = true
strip = "symbols"
