[package]
name = "chia-wallet-sdk"
version = "0.31.0"
edition = "2024"
license = "Apache-2.0"
description = "An unofficial SDK for building Chia wallets."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/chia-wallet-sdk"
repository = "https://github.com/xch-dev/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[workspace]
resolver = "2"
members = [
    "crates/*",
    "crates/chia-sdk-types/derive",
    "crates/chia-sdk-bindings/bindy",
    "crates/chia-sdk-bindings/bindy-macro",
    "napi",
    "wasm",
    "pyo3",
    "pyo3/stub-generator"
]

[workspace.package]
readme = "README.md"
keywords = ["chia", "wallet", "blockchain", "crypto"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
unsafe_code = "deny"
non_ascii_idents = "deny"
unused_extern_crates = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "allow"
unreachable_code = "warn"
unreachable_patterns = "deny"
dead_code = "deny"
deprecated = "deny"
deprecated_in_future = "deny"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"

[workspace.lints.rustdoc]
all = { level = "deny", priority = -1 }
missing_crate_level_docs = "allow"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
cargo_common_metadata = "allow"
result_large_err = "allow"
format_push_string = "allow"

[lints]
workspace = true

[features]
chip-0035 = ["chia-sdk-driver/chip-0035", "chia-sdk-types/chip-0035"]
offer-compression = ["chia-sdk-driver/offer-compression"]
native-tls = ["chia-sdk-client/native-tls", "chia-sdk-coinset/native-tls"]
rustls = ["chia-sdk-client/rustls", "chia-sdk-coinset/rustls"]
peer-simulator = ["chia-sdk-test/peer-simulator"]
action-layer = ["chia-sdk-types/action-layer", "chia-sdk-driver/action-layer"]

[dependencies]
chia-sdk-client = { workspace = true }
chia-sdk-driver = { workspace = true }
chia-sdk-signer = { workspace = true }
chia-sdk-test = { workspace = true, features = ["serde"] }
chia-sdk-types = { workspace = true }
chia-sdk-utils = { workspace = true }
chia-sdk-coinset = { workspace = true }
chia = { workspace = true }
clvm-traits = { workspace = true, features = ["derive"] }
clvmr = { workspace = true }
chia-puzzles = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
hex-literal = { workspace = true }

[workspace.dependencies]
chia-wallet-sdk = { version = "0.31.0", path = "." }
chia-sdk-client = { version = "0.31.0", path = "./crates/chia-sdk-client" }
chia-sdk-driver = { version = "0.31.0", path = "./crates/chia-sdk-driver" }
chia-sdk-signer = { version = "0.31.0", path = "./crates/chia-sdk-signer" }
chia-sdk-test = { version = "0.31.0", path = "./crates/chia-sdk-test" }
chia-sdk-types = { version = "0.31.0", path = "./crates/chia-sdk-types" }
chia-sdk-derive = { version = "0.31.0", path = "./crates/chia-sdk-types/derive" }
chia-sdk-utils = { version = "0.31.0", path = "./crates/chia-sdk-utils" }
chia-sdk-coinset = { version = "0.31.0", path = "./crates/chia-sdk-coinset" }
chia-sdk-bindings = { version = "0.31.0", path = "./crates/chia-sdk-bindings" }
bindy = { version = "0.31.0", path = "./crates/chia-sdk-bindings/bindy" }
bindy-macro = { version = "0.31.0", path = "./crates/chia-sdk-bindings/bindy-macro" }
chia = "0.32.0"
chia-ssl = "0.32.0"
chia-protocol = "0.32.0"
chia-consensus = "0.32.0"
chia-traits = "0.32.0"
chia-bls = "0.32.0"
chia-secp = "0.32.0"
chia-puzzle-types = "0.32.0"
clvm-traits = "0.32.0"
clvm-utils = "0.32.0"
chia-sha2 = "0.32.0"
chia_streamable_macro = "0.32.0"
chia-puzzles = "0.20.3"
clvmr = "0.16.2"
thiserror = "2.0.17"
hex = "0.4.3"
bech32 = "0.9.1"
rand = "0.9.2"
rand_chacha = "0.9.0"
hex-literal = "0.4.1"
indexmap = "2.11.4"
bip39 = "2.2.0"
futures-util = "0.3.30"
futures-channel = "0.3.30"
anyhow = "1.0.100"
tokio = "1.47.1"
itertools = "0.13.0"
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"
native-tls = "0.2.14"
rustls = "0.23.32"
rustls-pemfile = "2.2.0"
flate2 = "1.1.4"
num-bigint = "0.4.6"
rstest = "0.22.0"
tracing = "0.1.41"
syn = "2.0.106"
quote = "1.0.41"
convert_case = "0.8.0"
fastrand = "2.3.0"
napi = { version = "3.3.0", default-features = false }
napi-derive = { version = "3.2.5" }
napi-build = "3.0.0-beta.0"
paste = "1.0.15"
bigdecimal = "0.4.8"
k256 = "0.13.4"
p256 = "0.13.2"
signature = "2.2.0"
serde = "1.0.228"
serde_json = "1.0.145"
reqwest = { version = "0.12.23", default-features = false, features = ["json"] }
proc-macro2 = "1.0.101"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-derive = "0.3.0"
getrandom = "0.3.4"
sha2 = "0.10.9"
pyo3 = "0.23.5"
js-sys = "0.3.77"
parking_lot = "0.12.5"
chialisp = "0.4.1"
pyo3-async-runtimes = "0.23"
indoc = "2.0.6"
console_error_panic_hook = "0.1.7"
prettytable-rs = "0.10.0"
clap = "4.5.50"
bincode = "2.0.1"
rue-compiler = "0.6.0"
rue-options = "0.6.0"
rue-lir = "0.6.0"

[profile.release]
lto = true
strip = "symbols"
