[package]
publish = false
name = "chia-wallet-sdk-go"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
description = "Go bindings for the Chia Wallet SDK."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/chia-wallet-sdk"
repository = "https://github.com/xch-dev/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
cargo_common_metadata = "allow"
result_large_err = "allow"
missing_safety_doc = "allow"
not_unsafe_ptr_arg_deref = "allow"

[lints.rustdoc]
all = { level = "deny", priority = -1 }
missing_crate_level_docs = "allow"

[lib]
crate-type = ["cdylib", "staticlib"]
doc = false
test = false

[dependencies]
chia-sdk-bindings = { workspace = true, features = ["go"] }
bindy = { workspace = true, features = ["go"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
num-bigint = { workspace = true }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }
openssl-sys = { version = "0.9.108", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }
openssl-sys = { version = "0.9.108", features = ["vendored"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }
openssl-sys = { version = "0.9.108", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }
openssl-sys = { version = "0.9.108", features = ["vendored"] }

[package.metadata.cargo-machete]
ignored = ["bindy", "chia-sdk-bindings"]
