[package]
publish = false
name = "chia-wallet-sdk-napi"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Node.js bindings for the Chia Wallet SDK."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Rigidity/chia-wallet-sdk"
repository = "https://github.com/Rigidity/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true, features = ["napi6", "async"] }
napi-derive = { workspace = true }
chia-wallet-sdk = { workspace = true, features = ["rustls"] }
chia = { workspace = true }
clvmr = { workspace = true }
num-bigint = { workspace = true }
hex = { workspace = true }
paste = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

# This is to ensure that the bindgen feature is enabled for the aws-lc-rs crate.
# https://aws.github.io/aws-lc-rs/platform_support.html#tested-platforms
aws-lc-rs = { version = "1", features = ["bindgen"] }

[build-dependencies]
napi-build = "2.0.1"
