[package]
publish = false
name = "chia-wallet-sdk-napi"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Node.js bindings for the Chia Wallet SDK."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Rigidity/chia-wallet-sdk"
repository = "https://github.com/Rigidity/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true, features = ["napi6", "async"] }
napi-derive = { workspace = true }
chia-wallet-sdk = { workspace = true, features = ["native-tls", "experimental-vaults"] }
chia = { workspace = true }
clvmr = { workspace = true }
num-bigint = { workspace = true }
hex = { workspace = true }
paste = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
bip39 = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[build-dependencies]
napi-build = "2.1.4"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.68", features = ["vendored"] }
openssl-sys = { version = "0.9.105", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.68", features = ["vendored"] }
openssl-sys = { version = "0.9.105", features = ["vendored"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.68", features = ["vendored"] }
openssl-sys = { version = "0.9.105", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.68", features = ["vendored"] }
openssl-sys = { version = "0.9.105", features = ["vendored"] }
