[package]
name = "chia-wallet-sdk-py"
version = "0.21.1"
edition = "2021"

[lib]
name = "chia_wallet_sdk"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["num-bigint", "multiple-pymethods"] }
chia-sdk-bindings = { workspace = true, features = ["pyo3"] }
bindy = { workspace = true, features = ["pyo3"] }
bindy-macro = { workspace = true }
num-bigint = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["bindy", "chia-sdk-bindings", "pyo3"]
