[package]
publish = false
name = "cni-wallet-sdk-wasm"
version = "0.27.0"
edition = "2021"
license = "Apache-2.0"
description = "WASM bindings for the Chia Wallet SDK."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Chia-Network/cni-wallet-sdk"
repository = "https://github.com/Chia-Network/cni-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
doc = false
test = false

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-derive = { workspace = true }
chia-sdk-bindings = { workspace = true, features = ["wasm"] }
bindy = { workspace = true, features = ["wasm"] }
bindy-macro = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }
js-sys = { workspace = true }
console_error_panic_hook = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["chia-sdk-bindings", "getrandom", "wasm-bindgen-futures", "js-sys"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
