[package]
publish = false
name = "chia-wallet-sdk-wasm"
version = "0.33.0"
edition = "2024"
license = "Apache-2.0"
description = "WASM bindings for the Chia Wallet SDK."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/chia-wallet-sdk"
repository = "https://github.com/xch-dev/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
doc = false
test = false

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-derive = { workspace = true }
chia-sdk-bindings = { workspace = true, features = ["wasm"] }
bindy = { workspace = true, features = ["wasm"] }
bindy-macro = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }
js-sys = { workspace = true }
console_error_panic_hook = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["chia-sdk-bindings", "getrandom", "wasm-bindgen-futures", "js-sys"]

# Optimize for smallest WASM size (release profile used by wasm-pack build)
[profile.release]
opt-level = "z"
lto = true
strip = "symbols"

[package.metadata.wasm-pack.profile.release]
# Binaryen wasm-opt; -Oz prioritizes size over speed.
# Enable features used by Rust/LLVM output so the validator accepts them:
# - bulk-memory-opt: memory.copy, memory.fill
# - nontrapping-float-to-int: i32.trunc_sat_f64_u, i64.trunc_sat_f64_s, etc.
wasm-opt = ["-Oz", "--enable-bulk-memory-opt", "--enable-nontrapping-float-to-int"]
