[package]
name = "bindy-macro"
version = "0.20.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.7.1"
indexmap = { version = "2.7.1", features = ["serde"] }
proc-macro2 = "1.0.93"
quote = "1.0.38"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
syn = "2.0.98"
