[package]
name = "bindy"
version = "0.20.0"
edition = "2021"

[features]
napi = ["dep:napi"]
wasm = []
pyo3 = ["dep:pyo3"]

[dependencies]
thiserror = { workspace = true }
napi = { workspace = true, default-features = false, optional = true }
chia-protocol = { workspace = true }
pyo3 = { workspace = true, optional = true }
bech32 = { workspace = true }
bip39 = { workspace = true }
hex = { workspace = true }
chia-bls = { workspace = true }
chia-sdk-utils = { workspace = true }
chia-sdk-driver = { workspace = true }
chia-sdk-test = { workspace = true }
clvmr = { workspace = true }
clvm-traits = { workspace = true }
signature = { workspace = true }
num-bigint = { workspace = true }
