[package]
name = "chia-sdk-bindings"
version = "0.20.0"
edition = "2021"
license = "Apache-2.0"
description = "Underlying implementation of chia-wallet-sdk bindings."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Rigidity/chia-wallet-sdk"
repository = "https://github.com/Rigidity/chia-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[features]
napi = ["dep:napi", "dep:napi-derive"]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]
pyo3 = ["dep:pyo3"]

[dependencies]
napi = { workspace = true, features = ["napi6", "async"], optional = true }
napi-derive = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
thiserror = { workspace = true }
bech32 = { workspace = true }
bip39 = { workspace = true }
hex = { workspace = true }
chia-protocol = { workspace = true }
chia-bls = { workspace = true }
chia-secp = { workspace = true }
clvm-utils = { workspace = true }
chia-puzzle-types = { workspace = true }
chia-sdk-utils = { workspace = true }
chia-sdk-driver = { workspace = true }
chia-sdk-test = { workspace = true }
clvmr = { workspace = true }
clvm-traits = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
signature = { workspace = true }
num-bigint = { workspace = true }
js-sys = { workspace = true, optional = true }
